# Projet_IG3

./: CMakeLists.txt  README.md  TODO.txt
src/: bone.h  camera.cpp  camera.h  main.cpp  mesh.h
src/shaders/: cube_vs.glsl
